--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "framer-motion": "^12.18.1",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
